--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SCANOSS Quickscan",
+  "name": "scanoss-quickscan",
   "version": "1.0.3",
   "description": "A simple desktop application to use SCANOSS OSS KB to scan your files.",
   "main": "main.js",
@@ -30,6 +30,8 @@
   },
   "build": {
     "appId": "com.scanoss.quickscan",
+    "productName":  "SCANOSS Quickscan",
+    "copyright": "Copyright © 2020 SCANOSS.COM",
     "linux": {
       "target": [
         "deb",
