--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "electron-about-window": "^1.13.4",
     "isbinaryfile": "^4.0.8",
     "jquery": "^3.5.1",
+    "original-fs": "^1.1.0",
     "popper.js": "^1.16.1",
     "sqlite3": "^5.0.1"
   },
